--- a/404.md
+++ b/404.md
@@ -7,5 +7,5 @@ layout: 404
   <h1>404</h1>
 
   <p><strong>404 not found</strong></p>
-  <p>Cette page n'a pas pu etre trouvée.</p>
+  <p>This page can not be found.</p>
 </div>
